--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
  
     <!-- not sure if doing this right!!! -->
-    
+
     <!-- user will type in the input box, where stated "Type Here" and the user will click submit button -->
 
 <!-- will try and set up ajax so that when submit button is clicked the search to look for stocks with in the industry and stock information from the API will be sent to the user -->
@@ -53,7 +53,8 @@
     </div>
 
     
-    <!-- trying to make this where the user would see the different stocks of that industry -->
+    <!-- trying to make this "<div id="Indus&Stock"><ul></ul></div>""
+where the user would see the different stocks of that industry -->
 
     <!-- what exactly did we want the user to be able to do when clicking on the different stocks? 1.) display more in depth stock information about the industry or 2.) information about the industry itself  -->
     <div id="Indus&Stock"><ul></ul></div>
