As far as I can take this for now.

--- a/resources.html
+++ b/resources.html
@@ -11,8 +11,6 @@
 <body>
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-
-
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
                 data-target="navbarBasicExample">
                 <span aria-hidden="true"></span>
@@ -22,30 +20,60 @@
         </div>
 
         <div id="navbarBasicExample" class="navbar-menu">
-            <strong><div class="navbar-start">
-                <a class="navbar-item">
-                    Home
-                </a>
-                <a class="navbar-item">
-                    Results
-                </a>
-                <a class="navbar-item">
-                    Industry
-                </a>
-                <a class="navbar-item">
-                    Resources
-                </a>
-            </div></strong>
+            <strong>
+                <div class="navbar-start">
+                    <a class="navbar-item">
+                        Home
+                    </a>
+                    <a class="navbar-item">
+                        Results
+                    </a>
+                    <a class="navbar-item">
+                        Industry
+                    </a>
+                    <a class="navbar-item">
+                        Resources
+                    </a>
+                </div>
+            </strong>
         </div>
     </nav>
     <section class="section">
         <div class="container">
             <h1 class="title">
-                
+                Definitions and Resources
             </h1>
-            <p class="subtitle">
-                This will be the resources page!
-            </p>
+            <div class="columns">
+                <div class="column is-one-fifth">
+                    <strong><h2>Common terms:</h2></strong>
+                    <ul class="terms-menu">
+                        <li>Stock Price</li>
+                        <li>S&P Index</li>
+                        <li>Five Day Trend</li>
+                        <li>Graph</li>
+                    </ul>
+                </div>
+                <div class="column is-three-fifths">
+                    <div class="definitionsArea">
+                        <strong><h2>Definitions will show up here.</h2></strong>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, nemo quae, fuga commodi doloribus dolores sed inventore fugiat illum placeat, quibusdam laborum in tempore sapiente! Quibusdam, enim accusamus. Quam, doloribus?</p>
+                    </div>
+                    <br>
+                    <hr>
+                    <br>
+                    <div class="resourceArea">
+                        <strong><h2>Resources for Further Exploration:</h2></strong>
+                        <ul class="resource-list">
+                            <li>Resource 1</li>
+                            <li>Resource 2</li>
+                            <li>Resource 3</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="column is-one-fifth">
+                    This is where we will put the information from the main page.
+                </div>
+            </div>
         </div>
     </section>
 </body>
