fixed some stuff

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Industry</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -41,23 +42,23 @@
  
     <!-- not sure if doing this right!!! -->
 
-    <!-- user will type in the input box, where stated "Type Here" and the user will click submit button -->
+    <!-- user will type in the input box,  and the user will click submit button -->
 
 <!-- will try and set up ajax so that when submit button is clicked the search to look for stocks with in the industry and stock information from the API will be sent to the user -->
-<div class="container">
+<div id="indusSearch" class="container">
     <form action="StocksOfIndus">
-        <label for="IndustryStock"><strong>Industries & Stocks</strong></label><br>
-        <input type="text" id="IndustryStock" name="IndustryStock" value="Type Here"><br><br>
-        <input type="submit" value="Submit">
+        <label for="industryStock"><strong>Industries & Stocks:</strong></label><br>
+        <input type="text" id="industryStock" name="industryStock"><br>
+        <input type="submit" id="submitBtn">
       </form>
     </div>
 
-    
+
     <!-- trying to make this "<div id="Indus&Stock"><ul></ul></div>""
 where the user would see the different stocks of that industry -->
 
     <!-- what exactly did we want the user to be able to do when clicking on the different stocks? 1.) display more in depth stock information about the industry or 2.) information about the industry itself  -->
-    <div id="Indus&Stock"><ul></ul></div>
+    <div id="listOfStock"><ul></ul></div>
 
     <!-- will be using Jquery -->
 </body>
