--- a/resources.html
+++ b/resources.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="title is-1 is-spaced" id="pageTitle">What the Stock?</div>
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -76,6 +77,9 @@
             </div>
         </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="resources.js" type="text/javascript"></script>
 </body>
 
 </html>
