last night's changes

--- a/resources.html
+++ b/resources.html
@@ -20,25 +20,41 @@
             </a>
         </div>
 
-        <div id="navbarBasicExample" class="navbar-menu">
+        <div id="navbarWhatTheStock" class="navbar-menu">
             <strong>
                 <div class="navbar-start">
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="homepage.html">
                         Home
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="Results.html">
                         Results
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="industry.html">
                         Industry
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item is-active" href="resources.html">
                         Resources
                     </a>
                 </div>
             </strong>
         </div>
     </nav>
+
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <strong><a class="navbar-brand" href="#">Donna Engelberger</a></strong>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="contact.html">Contacts</a>
+          </div>
+        </div>
+    </nav> -->
+
+
     <section class="section">
         <div class="container">
             <h1 class="title">
@@ -47,9 +63,9 @@
             <div class="columns">
                 <div class="column is-one-fifth">
                     <strong><h2>Common terms:</h2></strong>
-                    <ul class="terms-menu">
+                    <ul class="termsMenu">
                         <li>Stock Price</li>
-                        <li>S&P Index</li>
+                        <li>S&P 500</li>
                         <li>Five Day Trend</li>
                         <li>Graph</li>
                     </ul>
