as of 2:30 on Thursday

--- a/resources.html
+++ b/resources.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resources</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -40,62 +41,226 @@
         </div>
     </nav>
 
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <strong><a class="navbar-brand" href="#">Donna Engelberger</a></strong>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="#">About <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-link" href="contact.html">Contacts</a>
-          </div>
-        </div>
-    </nav> -->
-
-
     <section class="section">
         <div class="container">
             <h1 class="title">
                 Definitions and Resources
             </h1>
             <div class="columns">
-                <div class="column is-one-fifth">
-                    <strong><h2>Common terms:</h2></strong>
-                    <ul class="termsMenu">
-                        <li>Stock Price</li>
-                        <li>S&P 500</li>
-                        <li>Five Day Trend</li>
-                        <li>Graph</li>
-                    </ul>
-                </div>
                 <div class="column is-three-fifths">
-                    <div class="definitionsArea">
-                        <strong><h2>Definitions will show up here.</h2></strong>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, nemo quae, fuga commodi doloribus dolores sed inventore fugiat illum placeat, quibusdam laborum in tempore sapiente! Quibusdam, enim accusamus. Quam, doloribus?</p>
+                    <div id="termsMenu">
+                        <h3>Dow Jones Industrial Average</h3>
+                        <div>
+                            <p>The Dow Jones Industrial Average is an index of 30 large blue-chip stock companies on the
+                                NY Stock Exchange. It is an indicator of how well the market is performing.</p>
+                            <p>sourece: https://www.investopedia.com/terms/d/djia.asp</p>
+                        </div>
+                        <h3>Five-day trend</h3>
+                        <div>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, blanditiis ex facere
+                                possimus maiores fuga aspernatur doloremque hic minima sint odio perferendis ut.
+                                Asperiores corrupti ducimus magni ipsam sunt! Fugiat.</p>
+                        </div>
+                        <h3>Graph</h3>
+                        <div>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis et provident non
+                                debitis, vitae amet beatae tenetur dicta aliquam laboriosam expedita est incidunt
+                                sapiente perspiciatis eos quo corporis repellendus? Cum.</p>
+                        </div>
+                        <h3>IPO</h3>
+                        <div>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore corrupti quae
+                                quaerat illo repellendus. Amet, dolorum debitis minima eos porro suscipit minus iure qui
+                                perspiciatis natus quia, quisquam sequi?
+                            </p>
+                        </div>
+                        <h3>Market-level indicator</h3>
+                        <div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, reiciendis
+                                dignissimos. Dolorem perspiciatis natus ratione dicta eum amet quaerat explicabo quod
+                                iste corporis quae dolor dolorum maxime consequatur, magnam inventore?</p>
+                        </div>
+                        <h3>Nasdaq Composite Index</h3>
+                        <div>
+                            <p>The Nasdaq Composite Index is based upon over 2,500 stocks on the Nasdaq Exchange, almost
+                                half of which are technology, but also includes healh care, financial, and other
+                                consumer service companies. It is an indicator of how well the market is performing.</p>
+                            <p>source: https://www.investopedia.com/terms/n/nasdaqcompositeindex.asp </p>
+                        </div>
+                        <h3>Sector-specific indicator</h3>
+                        <div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam magnam maiores facere
+                                odit provident architecto odio quaerat culpa modi consectetur corporis, aspernatur
+                                suscipit, officiis itaque. A ratione similique fugiat at?</p>
+                        </div>
+                        <h3>S & P 500</h3>
+                        <div>
+                            <p>The Standard & Poor's 500 Index (S&P500) is an index of the largets publicly traded US
+                                companies. It is widely used as a guage of how the market is performing. </p>
+                            <br>
+                            <p>source: www.investopedia.com/terms/s/sp500.asp</p>
+                        </div>
+                        <h3>Stock price</h3>
+                        <div>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa maxime magni soluta earum
+                                eius, praesentium necessitatibus aut dolor repellendus saepe reprehenderit, dolore, sunt
+                                sit. Distinctio unde quod in tempore nostrum?</p>
+                        </div>
                     </div>
-                    <br>
-                    <hr>
-                    <br>
-                    <div class="resourceArea">
-                        <strong><h2>Resources for Further Exploration:</h2></strong>
-                        <ul class="resource-list">
-                            <li>Resource 1</li>
-                            <li>Resource 2</li>
-                            <li>Resource 3</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="column is-one-fifth">
-                    This is where we will put the information from the main page.
-                </div>
+             <hr>   
+            <div class="resourceArea">
+                <h1 class="title">
+                Resources for Further Exploration:</h1>
+              
+                <ul class="resource-list">
+                    <li>Robinhood: Investing for Everyone</li><a href="https://robinhood.com/us/en/">https://robinhood.com/us/en/</a>
+                    <li>Trending Stocks: Investment.com</li><a href="https://www.investing.com/equities/trending-stocks">www.investing.com/equities/trending-stocks</a>
+                    <li>Resource 3</li>
+                </ul>
             </div>
         </div>
+
+                           <!-- Right side of the screen/trending -->
+            <div class="column is-two-fifths">
+                <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+                    <div class="row">
+                        <nav class="col-12 col-md-3 bg-light" id="time&date">
+                            <form class="input-group mb-3">
+                                <div class="column">
+                                    <h2 class="subtitle is-3">My Favorited Stocks</h2>
+
+                                    <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
+                                        <thead>
+                                            <tr>
+                                                <th title="Header">Rank</th>
+                                                <th>Company</th>
+                                                <th>Value</th>
+                                                <th title="UpDown">
+                                                    <i class="fas fa-sort-amount-up"></i>
+                                                    <i class="fas fa-sort-amount-down"></i>
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <th>1
+                                                    <i class="fas fa-star"></i>
+                                                </th>
+                                                <td><a href="">Company 1</a>
+                                                </td>
+                                                <td>x</td>
+                                                <td>x</td>
+                                            </tr>
+                                            <tr>
+                                                <th>2
+                                                    <i class="fas fa-star"></i>
+                                                </th>
+                                                <td><a href="">Company 2</a>
+                                                </td>
+                                                <td>x</td>
+                                                <td>x</td>
+                                            </tr>
+                                            <tr>
+                                                <th>3</th>
+                                                <td><a href="">Company 3</a>
+                                                </td>
+                                                <td>x</td>
+                                                <td>x</td>
+                                            </tr>
+                                            <tr>
+                                                <th>4</th>
+                                                <td><a href="">Company 4</a>
+                                                </td>
+                                                <td>x</td>
+                                                <td>x</td>
+                                            </tr>
+                                            <tr>
+                                                <th>5</th>
+                                                <td><a href="">Company 5</a>
+                                                </td>
+                                                <td>x</td>
+                                                <td>x</td>
+                                            </tr>
+                                    </table>
+                                </div>
+                        </nav>
+                </nav>
+
+
+
+                <!-- Icon Bar (Sidebar - hidden on small screens) -->
+                <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+                    <!-- Avatar image in top left corner -->
+                    <div class="row">
+
+                        <!-- Search by industry search bar -->
+                        <form class="input-group mb-3">
+                            <h2 class="subtitle is-3">Today's Top Trending</h2>
+                            <table id="table-1" class="table is-striped is-bordered is-fullwidth is-hoverable">
+
+                                <thead>
+                                    <tr>
+                                        <th title="Header">Rank</th>
+                                        <th>Company</th>
+                                        <th>Value</th>
+                                        <th title="UpDown">
+                                            <i class="fas fa-sort-amount-up"></i>
+                                            <i class="fas fa-sort-amount-down"></i>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>1
+                                            <i class="far fa-star"></i>
+                                        </th>
+                                        <td><a href="">Company 1</a>
+                                        </td>
+                                        <td>x</td>
+                                        <td>x</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2</th>
+                                        <td><a href="">Company 2</a>
+                                        </td>
+                                        <td>x</td>
+                                        <td>x</td>
+                                    </tr>
+                                    <tr>
+                                        <th>3</th>
+                                        <td><a href="">Company 3</a>
+                                        </td>
+                                        <td>x</td>
+                                        <td>x</td>
+                                    </tr>
+                                    <tr>
+                                        <th>4</th>
+                                        <td><a href="">Company 4</a>
+                                        </td>
+                                        <td>x</td>
+                                        <td>x</td>
+                                    </tr>
+                                    <tr>
+                                        <th>5</th>
+                                        <td><a href="">Company 5</a>
+                                        </td>
+                                        <td>x</td>
+                                        <td>x</td>
+                                    </tr>
+                            </table>
+                    </div>
+                </nav>
+
+           
+        </div>
+        </div>
     </section>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="resources.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="resources.js" type="text/javascript"></script>
 </body>
 
 </html>
