--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,6 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 
 <body>
@@ -38,16 +37,16 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <strong>
                 <div class="navbar-start">
-                    <a class="navbar-item">
+                    <a class="navbar-item is-active" href="homepage.html">
                         Home
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="Results.html">
                         Results
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="industry.html">
                         Industry
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="resources.html">
                         Resources
                     </a>
                 </div>
@@ -57,7 +56,7 @@
     <!--END NAV BAR-->
     <section class="section">
         <div class="container">
-            <h1 class="title">
+            <h1 class="title" id="#about">
                 ABOUT
             </h1>
             <p class="subtitle">
@@ -65,9 +64,8 @@
             </p>
             <div class=row>
                 <div class="level">
-                    <input class="input is-primary" type="text" placeholder="Search for a company or industry"><button
-                        class="button is-primary">
-
+                    <input id="searchTerm" class="input is-primary" type="text" placeholder="Search for a company or industry">
+                    <button id="#search-button"class="button is-primary">
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
@@ -90,42 +88,51 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr id="1Company">
                                 <th>1
-                                    <i class="far fa-star"></i>
+                                    <i id="star-rank-1" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
+                            
                                 </th>
-                                <td><a href="">Company 1</a>
+                                <td>
                                 </td>
-                                <td>x</td>
-                                <td>x</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
-                                <th>2</th>
-                                <td><a href="">Company 2</a>
+                                <th>2
+                                    <i id="star-rank-2" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td>
                                 </td>
-                                <td>x</td>
-                                <td>x</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
-                                <th>3</th>
-                                <td><a href="">Company 3</a>
+                                <th>3
+                                    <i id="star-rank-3" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td>
                                 </td>
-                                <td>x</td>
-                                <td>x</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
-                                <th>4</th>
-                                <td><a href="">Company 4</a>
+                                <th>4
+                                    <i id="star-rank-4" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td>
                                 </td>
-                                <td>x</td>
-                                <td>x</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
-                                <th>5</th>
-                                <td><a href="">Company 5</a>
+                                <th>5
+                                    <i id="star-rank-5" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td>
                                 </td>
-                                <td>x</td>
-                                <td>x</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                     </table>
                 </div>
@@ -144,52 +151,17 @@
                                 </th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <th>1
-                                    <i class="fas fa-star"></i>
-                                </th>
-                                <td><a href="">Company 1</a>
-                                </td>
-                                <td>x</td>
-                                <td>x</td>
-                            </tr>
-                            <tr>
-                                <th>2
-                                    <i class="fas fa-star"></i>
-                                </th>
-                                <td><a href="">Company 2</a>
-                                </td>
-                                <td>x</td>
-                                <td>x</td>
-                            </tr>
-                            <tr>
-                                <th>3</th>
-                                <td><a href="">Company 3</a>
-                                </td>
-                                <td>x</td>
-                                <td>x</td>
-                            </tr>
-                            <tr>
-                                <th>4</th>
-                                <td><a href="">Company 4</a>
-                                </td>
-                                <td>x</td>
-                                <td>x</td>
-                            </tr>
-                            <tr>
-                                <th>5</th>
-                                <td><a href="">Company 5</a>
-                                </td>
-                                <td>x</td>
-                                <td>x</td>
-                            </tr>
-                    </table>
+                        <tbody id="faveTable">
+
+                            </tbody>
+                        </table>
                 </div>
             </div>
         </div>
     </section>
-    <script type="javascript" src="homepage.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="homepage.js"></script>
+    
 </body>
 
 </html>
