--- a/resources.html
+++ b/resources.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resources</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
                     <a class="navbar-item">
                         Results
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item is-active">
                         Industry
                     </a>
                     <a class="navbar-item">
