--- a/homepage.html
+++ b/homepage.html
@@ -80,61 +80,69 @@
                             <tr>
                                 <th title="Header">Rank</th>
                                 <th>Company</th>
-                                <th>Value</th>
+                                <th>Symbol</th>
+                                <th>Price</tn>
+                                <th>Change</th>
                                 <th title="UpDown">
                                     <i class="fas fa-sort-amount-up"></i>
                                     <i class="fas fa-sort-amount-down"></i>
                                 </th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr id="1Company">
+                        <tbody id="trendBody">
+                            <tr id="row-1">
                                 <th>1
                                     <i id="star-rank-1" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
                             
                                 </th>
-                                <td>
-                                </td>
-                                <td></td>
-                                <td></td>
+                                <td id="compName1"></td>
+                                <td id="compSymb1"></td>
+                                <td id="price1"></td>
+                                <td id="change1"></td>
+                                <td id="upDown1"></td>
                             </tr>
                             <tr>
                                 <th>2
                                     <i id="star-rank-2" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
                                 </th>
-                                <td>
-                                </td>
-                                <td></td>
-                                <td></td>
+                                <td id="compName2"></td>
+                                <td id="compSymb2"></td>
+                                <td id="price2"></td>
+                                <td id="change2"></td>
+                                <td id="upDown2"></td>
                             </tr>
                             <tr>
                                 <th>3
                                     <i id="star-rank-3" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
                                 </th>
-                                <td>
-                                </td>
-                                <td></td>
-                                <td></td>
+                                <td id="compName3"></td>
+                                <td id="compSymb3"></td>
+                                <td id="price3"></td>
+                                <td id="change3"></td>
+                                <td id="upDown3"></td>
                             </tr>
                             <tr>
                                 <th>4
                                     <i id="star-rank-4" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
                                 </th>
-                                <td>
-                                </td>
-                                <td></td>
-                                <td></td>
+                                <td id="compName4"></td>
+                                <td id="compSymb4"></td>
+                                <td id="price4"></td>
+                                <td id="change4"></td>
+                                <td id="upDown4"></td>
                             </tr>
                             <tr>
                                 <th>5
                                     <i id="star-rank-5" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
                                 </th>
-                                <td>
-                                </td>
-                                <td></td>
-                                <td></td>
+                                <td id="compName5"></td>
+                                <td id="compSymb5"></td>
+                                <td id="price5"></td>
+                                <td id="change5"></td>
+                                <td id="upDown5"></td>
                             </tr>
                     </table>
+                    <a href="https://iexcloud.io">Data provided by IEX Cloud</a>
                 </div>
                 <div class="column">
                     <h2 class="subtitle is-3">My Favorited Stocks</h2>
