--- a/homepage.html
+++ b/homepage.html
@@ -98,8 +98,8 @@
                                 <td id="compName1"></td>
                                 <td id="compSymb1"></td>
                                 <td id="price1"></td>
-                                <td id="change1"></td>
-                                <td id="upDown1"></td>
+                                <td id="change1" class="changes"></td>
+                                <td id="upDown1" class="upDownPct"></td>
                             </tr>
                             <tr>
                                 <th>2
@@ -108,8 +108,8 @@
                                 <td id="compName2"></td>
                                 <td id="compSymb2"></td>
                                 <td id="price2"></td>
-                                <td id="change2"></td>
-                                <td id="upDown2"></td>
+                                <td id="change2" class="changes"></td>
+                                <td id="upDown2" class="upDownPct"></td>
                             </tr>
                             <tr>
                                 <th>3
@@ -118,8 +118,8 @@
                                 <td id="compName3"></td>
                                 <td id="compSymb3"></td>
                                 <td id="price3"></td>
-                                <td id="change3"></td>
-                                <td id="upDown3"></td>
+                                <td id="change3" class="changes"></td>
+                                <td id="upDown3" class="upDownPct"></td>
                             </tr>
                             <tr>
                                 <th>4
@@ -128,8 +128,8 @@
                                 <td id="compName4"></td>
                                 <td id="compSymb4"></td>
                                 <td id="price4"></td>
-                                <td id="change4"></td>
-                                <td id="upDown4"></td>
+                                <td id="change4" class="changes"></td>
+                                <td id="upDown4" class="upDownPct"></td>
                             </tr>
                             <tr>
                                 <th>5
@@ -138,8 +138,8 @@
                                 <td id="compName5"></td>
                                 <td id="compSymb5"></td>
                                 <td id="price5"></td>
-                                <td id="change5"></td>
-                                <td id="upDown5"></td>
+                                <td id="change5" class="changes"></td>
+                                <td id="upDown5" class="upDownPct"></td>
                             </tr>
                     </table>
                     <a href="https://iexcloud.io">Data provided by IEX Cloud</a>
