--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <style red="stylesheet" src="style.css"></style>
+    <style rel="stylesheet" href="style.css"></style>
 </head>
 
 <body>
