--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,20 @@
 </head>
 
 <body>
-    <div class="title is-1 is-spaced" id="pageTitle">What the Stock?</div>
+    <!--PAGE TITLE BANNER AREA-->
+    <section class="hero">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title is-1 is-spaced" id="pageTitle">
+                    WHAT THE STOCK?
+                </h1>
+                <h4 class="subtitle">
+                    All about stocks
+                </h4>
+            </div>
+        </div>
+    </section>
+    <!--PAGE NAVIGATION BAR-->
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -20,7 +33,6 @@
                 <span aria-hidden="true"></span>
             </a>
         </div>
-
         <div id="navbarWhatTheStock" class="navbar-menu">
             <strong>
                 <div class="navbar-start">
@@ -40,7 +52,7 @@
             </strong>
         </div>
     </nav>
-
+    <!--MAIN CONTENT AREA OF PAGE DIVIDED INTO A BIG LEFT SIDE AND A SIDEBAR ON RIGHT-->
     <section class="section">
         <div class="container">
             <h1 class="title">
@@ -107,151 +119,124 @@
                                 sit. Distinctio unde quod in tempore nostrum?</p>
                         </div>
                     </div>
-             <hr>   
-            <div class="resourceArea">
-                <h1 class="title">
-                Resources for Further Exploration:</h1>
-              
-                <ul class="resource-list">
-                    <li>Robinhood: Investing for Everyone</li><a href="https://robinhood.com/us/en/">https://robinhood.com/us/en/</a>
-                    <li>Trending Stocks: Investment.com</li><a href="https://www.investing.com/equities/trending-stocks">www.investing.com/equities/trending-stocks</a>
-                    <li>Resource 3</li>
-                </ul>
-            </div>
-        </div>
+                    <hr>
+                    <div class="resourceArea">
+                        <h1 class="title">
+                            Resources for Further Exploration:</h1>
 
-                           <!-- Right side of the screen/trending -->
-            <div class="column is-two-fifths">
-                <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-                    <div class="row">
-                        <nav class="col-12 col-md-3 bg-light" id="time&date">
-                            <form class="input-group mb-3">
-                                <div class="column">
-                                    <h2 class="subtitle is-3">My Favorited Stocks</h2>
-
-                                    <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
-                                        <thead>
-                                            <tr>
-                                                <th title="Header">Rank</th>
-                                                <th>Company</th>
-                                                <th>Value</th>
-                                                <th title="UpDown">
-                                                    <i class="fas fa-sort-amount-up"></i>
-                                                    <i class="fas fa-sort-amount-down"></i>
-                                                </th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <th>1
-                                                    <i class="fas fa-star"></i>
-                                                </th>
-                                                <td><a href="">Company 1</a>
-                                                </td>
-                                                <td>x</td>
-                                                <td>x</td>
-                                            </tr>
-                                            <tr>
-                                                <th>2
-                                                    <i class="fas fa-star"></i>
-                                                </th>
-                                                <td><a href="">Company 2</a>
-                                                </td>
-                                                <td>x</td>
-                                                <td>x</td>
-                                            </tr>
-                                            <tr>
-                                                <th>3</th>
-                                                <td><a href="">Company 3</a>
-                                                </td>
-                                                <td>x</td>
-                                                <td>x</td>
-                                            </tr>
-                                            <tr>
-                                                <th>4</th>
-                                                <td><a href="">Company 4</a>
-                                                </td>
-                                                <td>x</td>
-                                                <td>x</td>
-                                            </tr>
-                                            <tr>
-                                                <th>5</th>
-                                                <td><a href="">Company 5</a>
-                                                </td>
-                                                <td>x</td>
-                                                <td>x</td>
-                                            </tr>
-                                    </table>
-                                </div>
-                        </nav>
-                </nav>
-
-
-
-                <!-- Icon Bar (Sidebar - hidden on small screens) -->
-                <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-                    <!-- Avatar image in top left corner -->
-                    <div class="row">
-
-                        <!-- Search by industry search bar -->
-                        <form class="input-group mb-3">
-                            <h2 class="subtitle is-3">Today's Top Trending</h2>
-                            <table id="table-1" class="table is-striped is-bordered is-fullwidth is-hoverable">
-
-                                <thead>
-                                    <tr>
-                                        <th title="Header">Rank</th>
-                                        <th>Company</th>
-                                        <th>Value</th>
-                                        <th title="UpDown">
-                                            <i class="fas fa-sort-amount-up"></i>
-                                            <i class="fas fa-sort-amount-down"></i>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <th>1
-                                            <i class="far fa-star"></i>
-                                        </th>
-                                        <td><a href="">Company 1</a>
-                                        </td>
-                                        <td>x</td>
-                                        <td>x</td>
-                                    </tr>
-                                    <tr>
-                                        <th>2</th>
-                                        <td><a href="">Company 2</a>
-                                        </td>
-                                        <td>x</td>
-                                        <td>x</td>
-                                    </tr>
-                                    <tr>
-                                        <th>3</th>
-                                        <td><a href="">Company 3</a>
-                                        </td>
-                                        <td>x</td>
-                                        <td>x</td>
-                                    </tr>
-                                    <tr>
-                                        <th>4</th>
-                                        <td><a href="">Company 4</a>
-                                        </td>
-                                        <td>x</td>
-                                        <td>x</td>
-                                    </tr>
-                                    <tr>
-                                        <th>5</th>
-                                        <td><a href="">Company 5</a>
-                                        </td>
-                                        <td>x</td>
-                                        <td>x</td>
-                                    </tr>
-                            </table>
+                        <ul class="resource-list">
+                            <li>Robinhood: Investing for Everyone</li><a
+                                href="https://robinhood.com/us/en/">https://robinhood.com/us/en/</a>
+                            <li>Trending Stocks: Investment.com</li><a
+                                href="https://www.investing.com/equities/trending-stocks">www.investing.com/equities/trending-stocks</a>
+                            <li>Resource 3</li>
+                        </ul>
                     </div>
-                </nav>
+                </div>
 
-           
+                <div class="column is-two-fifths">
+                    <!--FROM THE HOMEPAGE HTML-->
+                    <!--TOP TRENDING TABLE FROM HOMEPAGE HTML-->
+                    <h2 class="subtitle is-3">Today's Top Trending</h2>
+                    <table id="table-1" class="table is-striped is-bordered is-fullwidth is-hoverable">
+                        <thead>
+                            <tr>
+                                <th title="Header">Rank</th>
+                                <th>Company</th>
+                                <th>Symbol</th>
+                                <th>Price</tn>
+                                <th>Change</th>
+                                <th title="UpDown">
+                                    <i class="fas fa-sort-amount-up"></i>
+                                    <i class="fas fa-sort-amount-down"></i>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody id="trendBody">
+                            <tr id="row-1">
+                                <th>1
+                                    <i id="star-rank-1" class="blankstar far fa-star"
+                                        onmouseover="this.className = 'fas fa-star'" ;
+                                        onmouseout="this.className='far fa-star'"></i>
+
+                                </th>
+                                <td id="compName1"></td>
+                                <td id="compSymb1"></td>
+                                <td id="price1"></td>
+                                <td id="change1" class="changes"></td>
+                                <td id="upDown1" class="upDownPct"></td>
+                            </tr>
+                            <tr>
+                                <th>2
+                                    <i id="star-rank-2" class="blankstar far fa-star"
+                                        onmouseover="this.className = 'fas fa-star'" ;
+                                        onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td id="compName2"></td>
+                                <td id="compSymb2"></td>
+                                <td id="price2"></td>
+                                <td id="change2" class="changes"></td>
+                                <td id="upDown2" class="upDownPct"></td>
+                            </tr>
+                            <tr>
+                                <th>3
+                                    <i id="star-rank-3" class="blankstar far fa-star"
+                                        onmouseover="this.className = 'fas fa-star'" ;
+                                        onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td id="compName3"></td>
+                                <td id="compSymb3"></td>
+                                <td id="price3"></td>
+                                <td id="change3" class="changes"></td>
+                                <td id="upDown3" class="upDownPct"></td>
+                            </tr>
+                            <tr>
+                                <th>4
+                                    <i id="star-rank-4" class="blankstar far fa-star"
+                                        onmouseover="this.className = 'fas fa-star'" ;
+                                        onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td id="compName4"></td>
+                                <td id="compSymb4"></td>
+                                <td id="price4"></td>
+                                <td id="change4" class="changes"></td>
+                                <td id="upDown4" class="upDownPct"></td>
+                            </tr>
+                            <tr>
+                                <th>5
+                                    <i id="star-rank-5" class="blankstar far fa-star"
+                                        onmouseover="this.className = 'fas fa-star'" ;
+                                        onmouseout="this.className='far fa-star'"></i>
+                                </th>
+                                <td id="compName5"></td>
+                                <td id="compSymb5"></td>
+                                <td id="price5"></td>
+                                <td id="change5" class="changes"></td>
+                                <td id="upDown5" class="upDownPct"></td>
+                            </tr>
+                    </table>
+                    <a href="https://iexcloud.io">Data provided by IEX Cloud</a>
+
+                    <!--MY FAVORITES TABLE FROM HOMEPAGE HTML-->
+
+                    <h2 class="subtitle is-3">My Favorited Stocks</h2>
+                    <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
+                        <thead>
+                            <tr>
+                                <th title="Header">Rank</th>
+                                <th>Company</th>
+                                <th>Value</th>
+                                <th title="UpDown">
+                                    <i class="fas fa-sort-amount-up"></i>
+                                    <i class="fas fa-sort-amount-down"></i>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody id="faveTable">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
         </div>
     </section>
@@ -260,7 +245,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="resources.js" type="text/javascript"></script>
+    <!--JAVASCRIPT FOR HOMEPAGE REFERENCED HERE FOR SIMILAR CONTENT-->
+    <script type="text/javascript" src="homepage.js"></script>
+    <!--SINCE THERE ARE ONLY A FEW LINES OF JAVASCRIPT FOR THIS PAGE IT WILL NOT REQUIRE A SEPARATE FILE.-->
+    <script type="text/javascript">
+        //THIS FUNCTION RUNS THE DEFINITIONS AREA ACCORDION ACTION.
+        $(function () {
+            $("#termsMenu").accordion();
+        });
+    </script>
 </body>
 
 </html>
