--- a/homepage.html
+++ b/homepage.html
@@ -151,7 +151,9 @@
                     <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
                         <thead>
                             <tr>
-                                <th title="Header">Rank</th>
+                                <th title="Header">
+                                    <i class='fas fa-star'></i>
+                                </th>
                                 <th>Company</th>
                                 <th>Value</th>
                                 <th title="UpDown">
